# Bomberman

./: .gitignore  .travis.yml  Makefile.am  autorun.sh  config.h  config.h.in~  configure  configure.ac
client/: Makefile
client/include/: core.h  gui.h
client/lib/: Makefile  Makefile.am  core.c  gui.c
client/src/: Makefile  Makefile.am  client  client.c
server/: Makefile  server
server/include/: bomb.h  bomb_t.h  game.h  server.h
server/lib/: Makefile  Makefile.am  bomb.c  bomb_t.c  game.c  server.c
server/src/: Makefile  Makefile.am  main.c  server
shared/: Makefile.am
shared/include/: constants.h  utils.h
shared/src/: Makefile.am  utils.c
